# binarylane-cli

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PREFERENCES.md  README.md  pyproject.toml
.github/workflows/: build.yml  checks.yml  release.yml
client-templates/: package_init.py.jinja
lib/binarylane/: client.py  errors.py  types.py
lib/binarylane/api/: __init__.py
lib/binarylane/api/account/: account_balance.py  account_get.py  account_invoice_get.py
lib/binarylane/api/action/: action_get.py  action_list.py  action_proceed.py
lib/binarylane/api/customers/: get_v2_customers_my_balance.py  get_v2_customers_my_invoices.py  get_v2_customers_my_unpaid_payment_failed_invoices.py
lib/binarylane/api/data_usages/: get_v2_data_usages_current.py
lib/binarylane/api/domain/: domain_create.py  domain_list.py  domain_nameservers_list.py  domain_record_delete.py  domain_record_get.py
lib/binarylane/api/domains/: delete_v2_domains_domain_name.py  delete_v2_domains_domain_name_records_record_id.py  get_v2_domains_domain_name.py  get_v2_domains_domain_name_records.py  get_v2_domains_domain_name_records_record_id.py  post_v2_domains_domain_name_records.py  post_v2_domains_refresh_nameserver_cache.py  put_v2_domains_domain_name_records_record_id.py
lib/binarylane/api/failover_ips/: get_v2_failover_ips_server_id.py  get_v2_failover_ips_server_id_available.py  post_v2_failover_ips_server_id.py
lib/binarylane/api/image/: image_download.py  image_list.py  image_update.py
lib/binarylane/api/images/: get_v2_images.py  get_v2_images_image_id_download.py  get_v2_images_image_id_or_slug.py
lib/binarylane/api/keys/: delete_v2_account_keys_key_id.py  get_v2_account_keys_key_id.py  post_v2_account_keys.py  put_v2_account_keys_key_id.py
lib/binarylane/api/load_balancer/: load_balancer_create.py  load_balancer_delete.py  load_balancer_rule_delete.py  load_balancer_server_delete.py
lib/binarylane/api/load_balancers/: delete_v2_load_balancers_load_balancer_id_servers.py  get_v2_load_balancers.py  get_v2_load_balancers_availability.py  get_v2_load_balancers_load_balancer_id.py  post_v2_load_balancers.py  post_v2_load_balancers_load_balancer_id_forwarding_rules.py  post_v2_load_balancers_load_balancer_id_servers.py  put_v2_load_balancers_load_balancer_id.py
lib/binarylane/api/regions/: get_v2_regions.py
lib/binarylane/api/reverse_names/: get_v2_reverse_names_ipv6.py  post_v2_reverse_names_ipv6.py
lib/binarylane/api/server/: server_action_list.py  server_create.py  (+17 more)
lib/binarylane/models/: __init__.py  account.py  account_response.py  account_status.py  action.py  action_link.py  action_progress.py  action_response.py  action_status.py  actions_links.py  actions_response.py  add_disk.py  add_disk_type.py  advanced_feature.py  advanced_firewall_rule.py  advanced_firewall_rule_action.py  advanced_firewall_rule_protocol.py  advanced_firewall_rule_request.py  advanced_firewall_rules_response.py  advanced_server_features.py  algorithm_type.py  attach_backup.py  attach_backup_type.py  attached_backup.py  available_advanced_server_features.py  available_advanced_server_features_response.py  backup_disk.py  backup_info.py  backup_replacement_strategy.py  backup_settings.py  backup_slot.py  backup_window.py  backups_response.py  balance.py  balance_response.py  change_advanced_features.py  change_advanced_features_type.py  change_advanced_firewall_rules.py  change_advanced_firewall_rules_type.py  change_backup_schedule.py  (+216 more)
scripts/: client.yml  commands.yml  generate-client.sh  generate-commands.sh  generate.py  generate.sh  make-exe.cmd  openapi-python-client.yml
src/binarylane/config/: __init__.py  _options.py  commandline_source.py  config.py  default_source.py  environment_source.py  file_source.py  option.py  options.py  repository.py  runtime_source.py  source.py  sources.py  types.py
src/binarylane/console/: __init__.py  __main__.py  actions.py  app.py  cli.py  config.py  context.py  metadata.py  util.py
src/binarylane/pycompat/: __init__.py  actions.py  functools.py  importlib.py  shlex.py  typing.py
src/blcli/: __init__.py  __main__.py  actions.py  app.py  cli.py  config.py  runner.py
src/blcli/app/: __init__.py  app.py  configure.py  version.py
src/blcli/client/: __init__.py
src/blcli/commands/: __init__.py
src/blcli/printers/: __init__.py  formatter.py  json_printer.py  plain_printer.py  printer.py  table_printer.py  tsv_printer.py
src/blcli/runners/: __init__.py  action_runner.py  actionlink_runner.py  command_runner.py  httpx_wrapper.py  list_runner.py  module_runner.py  package_runner.py  runner.py
templates/: api_init.py.jinja  endpoint_init.py.jinja  endpoint_module.py.jinja  list_response.jinja  lookups.jinja  package_init.py.jinja
templates/endpoint_module/: attributes.jinja  command_request.jinja  create_mapping.jinja  imports.jinja  list_response.jinja  list_runner.jinja  lookups.jinja  request.jinja  response_class.jinja
tests/: __init__.py  runner.py  test_config.py  test_config_sources.py
tests/config/: conftest.py  test_config.py  test_options.py  test_repository.py  test_sources.py
tests/config/sources/: test_commandline_source.py  test_default_source.py  test_environment_source.py  test_file_source.py  test_runtime_source.py
tests/end-to-end/: test_performance.py
tests/integration/: conftest.py  test_app.py  test_command_parsers.py  test_curl.py  test_help.py  test_list.py  test_output_json.py  test_package.py  test_response_types.py  test_runner_error.py  test_version.py
tests/models/: __init__.py  create_server_response.py  host.py  image.py  links.py  meta.py  network.py  network_type.py  networks.py  pages.py  problem_details.py  region.py  server.py  server_status.py  servers_response.py  size.py  validation_problem_details.py
tests/parser/: __init__.py  test_boolean.py  test_enum.py  test_list.py  test_lookup.py  test_object.py
tests/printers/: conftest.py  test_formatter.py  test_json.py
tests/runners/: test_action_runner.py  test_actionlink_runner.py  test_command_runner.py  test_list.py
(+1050 files in other folders)
