[tool.poetry]
name = "binarylane-cli"
version = "0.16.0"
description = ""
authors = ["Nathan O'Sullivan <nathan.osullivan@mammoth.com.au>"]
readme = "README.md"
packages = [{include = "binarylane", from = "src"}, {include = "binarylane", from = "lib" }]

[tool.poetry.dependencies]
python = "^3.8.1"
terminaltables = "^3.1.10"
httpx = "^0.23.0"
attrs = "^22.2.0"
python-dateutil = "^2.8.2"

[tool.poetry.scripts]
bl = "binarylane.console.__main__:main"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"
isort = "*"
black = "*"
mypy = "*"
types-python-dateutil = "^2.8.19"
pytest = "^7.2.0"
absolufy-imports = "^0.3.1"
binarylane-python-client = "^0.13.2a0"
safety = "*"

[tool.poetry.group.pylint.dependencies]
pylint = { version = "^3.3.4", python = ">=3.9" }

[tool.poetry.group.pylint-38.dependencies]
pylint = { version = "^2.15.2", python = "<3.9" }

[tool.taskipy.tasks]
generate = "python scripts/generate.py"
black = "black ."
isort = "isort ."
mypy = "mypy ."
pylint = "pylint src"
safety = "poetry export -f requirements.txt | safety check --bare --stdin"
test = "pytest tests"
check = "task isort && task black && task mypy && task pylint && task test && task safety"

[tool.isort]
py_version = 37
line_length = 120
profile = "black"
sections=['FUTURE', 'STDLIB', 'COMPAT', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
no_lines_before=["COMPAT"]
known_compat=["binarylane.pycompat"]
known_first_party=["binarylane"]
known_local_folder=["binarylane.console"]
add_imports=["from __future__ import annotations"]

[tool.black]
line-length = 120
target_version = ["py37"]

[tool.pylint.format]
max-line-length = 120
ignore-paths = ['src/binarylane/console/commands/*/']

[tool.pylint.messages_control]
disable = [
    "import-outside-toplevel",  # CLI programs need delayed import
    "design",  # design checker is too opinionated
    "fixme",  # FIXME: initial impl in progress

    # Checkbox documentation is bad:
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
mypy_path = "lib:src"
namespace_packages = true
explicit_package_bases = true

[tool.pyright]
extraPaths = ["src", "lib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
