[tool.poetry]
name = "binarylane-cli"
version = "0.20.0"
description = ""
authors = ["Nathan O'Sullivan <nathan.osullivan@mammoth.com.au>"]
readme = "README.md"
packages = [{include = "binarylane", from = "src"}, {include = "binarylane", from = "lib" }]

[tool.poetry.dependencies]
python = "^3.8.1"
terminaltables = "^3.1.10"
httpx = "^0.25.0"
attrs = "^22.2.0"
python-dateutil = "^2.8.2"

[tool.poetry.scripts]
bl = "binarylane.console.__main__:main"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"
mypy = "*"
types-python-dateutil = "^2.8.19"
pytest = "^7.2.0"
absolufy-imports = "^0.3.1"
binarylane-python-client = "^0.13.2a0"
safety = "<3.0.0"
ruff = "^0.9.6"

[tool.taskipy.tasks]
generate = "python scripts/generate.py"
format = "ruff format ."
isort = "ruff check --select I . --fix"
mypy = "mypy ."
ruff = "ruff check src tests --extend-exclude tests/models"
safety = "poetry export -f requirements.txt | safety check --bare --stdin"
test = "pytest tests"
check = "task isort && task format && task mypy && task ruff && task test && task safety"

[tool.ruff]
# Always generate Python 3.8-compatible code.
target-version = "py38"
line-length = 120
exclude = [
    "api",  # generated command classes
    ".venv"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "TC", "PL", "I"]
ignore = ["PLR"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "compat", "third-party", "first-party", "local-folder"]
no-lines-before = ["compat"]
sections = { "compat" = ["binarylane.pycompat"] }
known-first-party = ["binarylane"]
known-local-folder = ["binarylane.console"]
required-imports = ["from __future__ import annotations"]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true
mypy_path = "lib:src"
namespace_packages = true
explicit_package_bases = true

[tool.pyright]
extraPaths = ["src", "lib"]

# Required by binarylane-openapi-client
[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
